# Soccer-OmniDirectionalRobot

./: .gitignore  README.md  frames.gv  topics.txt
src/control_arduino/: CMakeLists.txt  package.xml  setup.py
src/control_arduino/msg/: RobotCommand.msg
src/control_arduino/src/: arduino_comm.py
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: all_other.launch  gazebo_robot.launch  main_nodes.launch  move_base.launch  robot.launch  test_control.launch
src/launch_pkg/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/launch_pkg/rviz/: viz_config.rviz
src/myrobot_gazebo/: CMakeLists.txt  package.xml
src/myrobot_gazebo/launch/: myrobot_world.launch
src/myrobot_gazebo/rviz_parameters/: urdf_mine.rviz
src/myrobot_gazebo/urdf/: myrobot_descr (copy).xacro  myrobot_descr.gazebo  myrobot_descr.xacro
src/myrobot_gazebo/worlds/: ball_left.world  big_ball.world  myworld.world  myworld_prova.world
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/msg/: RobotVision.msg
src/robot_control/src/: BallPosePub.py  arduino_bridge.py  arduino_comm.py  central_control.cpp  vel_converter.cpp
src/robot_control/srv/: BallPose.srv
src/robot_map/: CMakeLists.txt  package.xml
src/robot_map/launch/: robot_map.launch
src/robot_vision/: CMakeLists.txt  Readme.txt  package.xml  setup.py
src/robot_vision/src/: ball_detection.py  depth_analysis.py  example_ball.py  fake_laser.py  original_depth_analysis.py
(+3 files in other folders)
