<?xml version="1.0"?>
<package format="2">
  <name>robot_map</name>
  <version>0.0.0</version>
  <description>The robot_map package</description>

  <maintainer email="astha736@gmai.com">francesca</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
